<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GeoMeet</string>
    <string name="action_settings">Settings</string>
    <string name="default_status_text">Obtaining connection status...</string>
    <string name="snap_photo">Snap Photo</string>
    <string name="enter_address">Enter Address</string>
    <string name="or">OR</string>
    <string name="use_current_location">Use Current Location</string>
    <string name="user_inputed_image">User Inputed Image</string>
    <string name="enter_meet_up_details">Enter Meet Up Details</string>
    <string name="share_meet_">Share Meet!</string>
    <string name="dialog_title">We apologize!</string>
    <string name="dialog_msg">It appears you have forgot to snap a photo to share!</string>
    <string name="dialog_title_two">We apologize!</string>
    <string name="dialog_msg_two">It appears you have forgot to enter in an address or meeting description to share!</string>
    <string name="step_3">Step 3: Share w/ Friends!</string>
    <string name="step_1">Step 1: Take Appealing Photo!</string>
    <string name="step_2">Step 2: Set Meet Details</string>
    
</resources>
